--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <!-- `head` is for metadata -->
     <meta charset="utf-8">
     <title>Bárbara Michea</title>
     <style>
       h1, h2, h3, p {
         color: #201e30;
       }
+      
       h1 {
         border-bottom: 10px solid #201e30;
         text-transform: uppercase;
       }
+
       h2 {
         border-bottom: 10px solid #FFCA00;
         text-transform: uppercase;
       }
-
     </style>
-
   </head>
   <body>
     <main>
